# Image3D

./: .gitignore  CMakeLists.txt  Image3D.pro  Image3D.qrc  README.md
src/: CMakeLists.txt  Camera.cpp  Camera.h  Drawable.hpp  FboRendererFactory.cpp  FboRendererFactory.h  FboRendererManager.cpp  FboRendererManager.h  GlFuncs.cpp  GlFuncs.h  ImageRenderer.cpp  ImageRenderer.h  Layer.cpp  Layer.h  LayerImpl.cpp  LayerImpl.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  main.cpp  main.qml  squircle.cpp  squircle.h
src/shaders/: shader.fs  shader.vs
